mp3/compiler_errors.txt
compilation of version 5 failed with:
mkdir -p obj
g++ -std=c++11 -g -Wall -Wextra -Wno-sign-compare  -c -o obj/linkstate.o src/linkstate.cpp
src/linkstate.cpp: In function ‘void OutTopology(Graph, int, std::unordered_map<int, int>&, std::unordered_map<int, int>&)’:
src/linkstate.cpp:90:15: error: ‘class Graph’ has no member named ‘HasNode’
         if(!g.HasNode(dst)){
               ^
src/linkstate.cpp: In function ‘int main(int, char**)’:
src/linkstate.cpp:243:19: error: ‘class Graph’ has no member named ‘HasNode’
             if(!g.HasNode(i))
                   ^
Makefile:71: recipe for target 'obj/linkstate.o' failed
make: *** [obj/linkstate.o] Error 1
 

